--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "@types/react-router-dom": "^5.3.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-player": "^2.9.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
-    "react-player": "^2.9.0",
+    "swiper": "^8.0.7",
     "typescript": "^4.6.2",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
