--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "@types/node": "^12.20.47",
     "@types/react": "^16.14.24",
     "@types/react-dom": "^16.9.14",
+    "@types/react-redux": "^7.1.23",
     "@types/react-router-dom": "^5.3.3",
+    "@types/lodash": "^4.14.178",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-player": "^2.9.0",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "redux-thunk": "^2.4.1",
     "swiper": "^8.0.7",
     "typescript": "^4.6.2",
     "web-vitals": "^0.2.4",
