--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^16.9.14",
     "@types/react-redux": "^7.1.23",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^0.26.1",
     "gsap": "^3.9.1",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
