--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "styled-components": "^5.3.5",
     "swipe-js-iso": "^2.1.5",
     "swiper": "^8.0.7",
+    "swr": "^1.3.0",
     "typescript": "^4.6.2",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
