--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-redux": "^7.1.23",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^0.27.2",
+    "bignumber.js": "^9.0.0",
     "formik": "^2.2.9",
     "framer-motion": "^6.2.8",
     "gsap": "^3.9.1",
