--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "swiper": "^8.0.7",
     "swr": "^1.3.0",
     "typescript": "^4.6.2",
+    "wavesurfer-react": "^2.2.2",
+    "wavesurfer.js": "^6.4.0",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
     "workbox-broadcast-update": "^5.1.4",
