--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "logrocket": "^3.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-fast-marquee": "^1.3.5",
     "react-player": "^2.9.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
