--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lodash": "^4.17.21",
     "logrocket": "^3.0.1",
     "react": "^17.0.2",
+    "react-audio-visualizers": "^0.1.1",
     "react-dom": "^17.0.2",
     "react-fast-marquee": "^1.3.5",
     "react-player": "^2.9.0",
