--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gsap": "^3.9.1",
     "lodash": "^4.17.21",
     "logrocket": "^3.0.1",
+    "luxon": "^3.1.0",
     "react": "^17.0.2",
     "react-audio-visualizers": "^0.1.1",
     "react-dom": "^17.0.2",
