--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.24",
     "@types/lodash": "^4.14.178",
+    "@types/luxon": "^3.1.0",
     "@types/node": "^12.20.47",
     "@types/react": "^16.14.24",
     "@types/react-dom": "^16.9.14",
