--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-fast-marquee": "^1.3.5",
     "react-player": "^2.9.0",
     "react-qr-code": "^2.0.11",
+    "react-qr-reader": "^3.0.0-beta-1",
     "react-qr-scanner": "^1.0.0-alpha.11",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
