--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-router-dom": "^5.3.3",
     "axios": "^0.27.2",
     "bignumber.js": "^9.0.0",
+    "file-saver": "^2.0.5",
     "formik": "^2.2.9",
     "framer-motion": "^6.5.1",
     "gsap": "^3.9.1",
@@ -48,6 +49,8 @@
     "swiper": "^8.0.7",
     "swr": "^1.3.0",
     "typescript": "^4.6.2",
+    "use-react-screenshot": "^3.0.0",
+    "use-screenshot-hook": "^1.0.2",
     "wavesurfer-react": "^2.2.2",
     "wavesurfer.js": "^6.4.0",
     "web-vitals": "^0.2.4",
@@ -90,6 +93,7 @@
     ]
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.5",
     "@types/react-swipe": "^6.0.2",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
