--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-router-dom": "^5.3.3",
     "axios": "^0.27.2",
     "bignumber.js": "^9.0.0",
+    "compass-mixins": "^0.12.12",
     "file-saver": "^2.0.5",
     "formik": "^2.2.9",
     "framer-motion": "^6.5.1",
@@ -29,6 +30,7 @@
     "lodash": "^4.17.21",
     "logrocket": "^3.0.1",
     "luxon": "^3.1.0",
+    "node-sass": "^8.0.0",
     "react": "^17.0.2",
     "react-audio-visualizers": "^0.1.1",
     "react-dom": "^17.0.2",
