--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-audio-visualizers": "^0.1.1",
     "react-dom": "^17.0.2",
     "react-fast-marquee": "^1.3.5",
+    "react-parallax": "^3.5.1",
     "react-player": "^2.9.0",
     "react-qr-code": "^2.0.11",
     "react-qr-reader": "^3.0.0-beta-1",
