--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "dependencies": {
     "3d-react-carousal": "^5.0.0",
-    "@emotion/react": "^11.9.3",
-    "@emotion/styled": "^11.9.3",
+    "@chakra-ui/react": "^2.5.1",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.0",
     "@mui/styles": "^5.9.0",
@@ -32,9 +33,9 @@
     "logrocket": "^3.0.1",
     "luxon": "^3.1.0",
     "node-sass": "^8.0.0",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-audio-visualizers": "^0.1.1",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.3.5",
     "react-parallax": "^3.5.1",
     "react-player": "^2.9.0",
