--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "3d-react-carousal": "^5.0.0",
     "@chakra-ui/react": "^2.5.1",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
@@ -22,6 +21,7 @@
     "@types/react-dom": "^16.9.14",
     "@types/react-redux": "^7.1.23",
     "@types/react-router-dom": "^5.3.3",
+    "3d-react-carousal": "^5.0.0",
     "axios": "^0.27.2",
     "bignumber.js": "^9.0.0",
     "compass-mixins": "^0.12.12",
@@ -37,6 +37,7 @@
     "react-audio-visualizers": "^0.1.1",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.3.5",
+    "react-icons": "^4.11.0",
     "react-parallax": "^3.5.1",
     "react-player": "^2.9.0",
     "react-qr-code": "^2.0.11",
